<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/common_margin20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/shopping_list_flilter_height"
                android:gravity="center"
                android:text="@string/shopping_list_flilter_filter"
                android:textColor="@color/color_default_font_color"
                android:textSize="@dimen/shopping_list_flilter_title_font_size" />

            <View style="@style/HorizontalLine" />

            <RelativeLayout
                android:id="@+id/rl_all_type"
                android:layout_width="match_parent"
                android:layout_height="@dimen/shopping_list_flilter_height"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/common_margin20dp"
                android:paddingRight="@dimen/common_margin20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shopping_list_flilter_all_type"
                    android:textColor="@color/color_default_font_color"
                    android:textSize="@dimen/shopping_list_flilter_font_size" />

                <TextView
                    android:id="@+id/tv_all_class_selete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:drawablePadding="@dimen/shopping_list_filter_text_margin"
                    android:drawableRight="@mipmap/back_right"
                    android:text="@string/shopping_list_flilter_all"
                    android:textColor="@color/color_hint_font_color"
                    android:textSize="@dimen/shopping_list_flilter_font_size" />

            </RelativeLayout>

            <View style="@style/HorizontalLine" />

            <RelativeLayout
                android:id="@+id/rl_flilter_suggest"
                android:layout_width="match_parent"
                android:layout_height="@dimen/shopping_list_flilter_height"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/common_margin20dp"
                android:paddingRight="@dimen/common_margin20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shopping_list_flilter_suggest"
                    android:textColor="@color/color_default_font_color"
                    android:textSize="@dimen/shopping_list_flilter_font_size" />

                <TextView
                    android:id="@+id/tv_suggest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:drawablePadding="@dimen/shopping_list_filter_text_margin"
                    android:drawableRight="@mipmap/back_right"
                    android:text="@string/shopping_list_flilter_all"
                    android:textColor="@color/color_hint_font_color"
                    android:textSize="@dimen/shopping_list_flilter_font_size" />

            </RelativeLayout>

            <View style="@style/bigHorizontalLine" />

            <com.fecmobile.jiubeirobot.common.view.FilterItemView
                android:id="@+id/fiv_grapevine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <!--价格筛选-->

            <com.fecmobile.jiubeirobot.common.view.ConstionView
                android:id="@+id/cv_price_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_margin10dp"
                app:higtTxt="@string/shopping_list_higt_price"
                app:lowTxt="@string/shopping_list_low_price"
                app:svFilter1="@string/shopping_list_price_70_200"
                app:svFilter2="@string/shopping_list_price_200_500"
                app:svFilter3="@string/shopping_list_price_500_1500"
                app:titleText="@string/shopping_list_flilter_price" />

            <com.fecmobile.jiubeirobot.common.view.FilterItemView
                android:id="@+id/fiv_grape_variety"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_margin10dp"
                app:titleTxt="@string/shopping_list_grape_variety" />

            <com.fecmobile.jiubeirobot.common.view.FilterItemView
                android:id="@+id/fiv_brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_margin10dp"
                app:titleTxt="@string/shopping_list_price_brand" />

            <com.fecmobile.jiubeirobot.common.view.ConstionView
                android:layout_width="match_parent"
                android:id="@+id/cv_year_filter"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_margin10dp"
                app:higtHide="false"
                app:higtTxt="@string/shopping_list_particular_year"
                app:lowTxt="@string/shopping_list_particular_year"
                app:svFilter1="@string/shopping_list_year_2015"
                app:svFilter2="@string/shopping_list_year_2014"
                app:svFilter3="@string/shopping_list_year_2013"
                app:titleText="@string/shopping_list_particular_year" />

            <com.fecmobile.jiubeirobot.common.view.FilterItemView
                android:id="@+id/fiv_flavor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_margin10dp"
                app:titleTxt="@string/shopping_list_flavor" />
        </LinearLayout>
    </ScrollView>

    <View style="@style/HorizontalLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/shopping_list_filter_button_height"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_white"
            android:text="@string/common_reset"
            android:textColor="@color/black"
            android:textSize="@dimen/common_default_font_size" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_main"
            android:text="@string/common_comfirm"
            android:textColor="@color/color_white"
            android:textSize="@dimen/common_default_font_size" />
    </LinearLayout>
</LinearLayout>
