<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lLayout_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/user_dialog_delete_icon_padding"
        android:background="@drawable/shape_delete_dialog_bg"
        android:orientation="vertical"
        android:padding="@dimen/user_dialog_padding">


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_send_check_to_phone"
                android:textColor="@color/black"
                android:textSize="@dimen/common_size18sp" />


            <TextView
                android:id="@+id/tv_check_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/common_size18sp"
                android:textColor="@color/black" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin15dp"
            android:background="@drawable/shape_input_circular_boder"
            android:padding="@dimen/common_margin15dp">

            <TextView
                android:layout_width="@dimen/user_dialog_input_left_width"
                android:layout_height="wrap_content"
                android:text="@string/common_check_code"
                android:textColor="@color/color_33"
                android:textSize="@dimen/common_size18sp" />

            <EditText
                android:id="@+id/et_check_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/user_hint_note_check_code"
                android:inputType="text"
                android:maxLength="6"
                android:singleLine="true"
                android:textSize="@dimen/common_size18sp" />

            <View style="@style/VerticalLine" />

            <TextView
                android:id="@+id/tv_phone_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/common_margin10dp"
                android:gravity="center"
                android:text="@string/common_get_check_code"
                android:textColor="@color/color_main"
                android:textSize="@dimen/common_size18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin6dp"
            android:background="@drawable/shape_input_circular_boder"
            android:padding="@dimen/common_margin15dp">

            <TextView
                android:layout_width="@dimen/user_dialog_input_left_width"
                android:layout_height="wrap_content"
                android:text="@string/user_set_pwd"
                android:textColor="@color/color_33"
                android:textSize="@dimen/common_size18sp" />

            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/user_hint_pwd_format"
                android:inputType="textPassword"
                android:maxLength="20"
                android:singleLine="true"
                android:textSize="@dimen/common_size18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin6dp"
            android:background="@drawable/shape_input_circular_boder"
            android:padding="@dimen/common_margin15dp">

            <TextView
                android:layout_width="@dimen/user_dialog_input_left_width"
                android:layout_height="wrap_content"
                android:text="@string/user_comfirm_pwd"
                android:textColor="@color/color_33"
                android:textSize="@dimen/common_size18sp" />

            <EditText
                android:id="@+id/et_rePwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/user_hint_comfirm_pwd"
                android:inputType="textPassword"
                android:maxLength="20"
                android:singleLine="true"
                android:textSize="@dimen/common_size18sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_register"
            style="@style/RedButtonStyle"
            android:layout_marginTop="@dimen/common_margin20dp"
            android:text="@string/common_register" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/user_register_derault_consent" />

            <TextView
                android:id="@+id/tv_protocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/common_margin15dp"
                android:text="@string/common_terms_service"
                android:textColor="@color/actionsheet_blue" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="@dimen/user_dialog_delete_icon_size"
        android:layout_height="@dimen/user_dialog_delete_icon_size"
        android:layout_alignParentRight="true"
        android:src="@mipmap/dialog_close_icon" />
</RelativeLayout>